fixes #921 overlapping solved

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -749,7 +749,7 @@ body a {cursor: pointer;}
 }
 .tcTime {
     display: block;
-    width: 240px;  
+    width: 240px;
     padding-right: 33px;
     font-size: 14px;
     text-align: right;
@@ -1055,7 +1055,7 @@ footer .right>span:nth-child(2) {
 }
 .modal .modal-content .modal-body p {
     margin: auto 20px;
-    overflow-x: auto; 
+    overflow-x: auto;
 }
 .modal .modal-content .wizardBody p {
     margin: 0;
@@ -1879,7 +1879,7 @@ footer .right>span:nth-child(2) {
 .panel-custom {
     width: 759px;
     border: 1px solid #234760;
-    height: 315px;
+    height: 338px;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
@@ -1969,7 +1969,7 @@ footer .right>span:nth-child(2) {
 .panel-custom .schedulePanel,
 .panel-custom .roomsPanel,
 .panel-custom .statusPanel {
-    height: 141px;
+    height: 164px;
     padding: 12px 0;
     border-top: 1px solid #0bbbe7;
     line-height: 23px;
@@ -3136,7 +3136,7 @@ footer .right>span:nth-child(2) {
 
 /* contest plan widget */
 .panelContestPlan {
-    height: 315px;
+    height: 338px;
     width: 407px;
     border-color: #1f444e;
     background: #151718;
@@ -3145,8 +3145,8 @@ footer .right>span:nth-child(2) {
     border-radius: 0;
 }
 .panelContestPlan .panel-heading {
-    padding: 6px 29px 10px 28px;
-    height: 40px;
+    padding: 10px 29px 10px 28px;
+    height: 44px;
     font-size: 16px;
     line-height: 25px;
 }
@@ -3186,9 +3186,7 @@ footer .right>span:nth-child(2) {
     opacity: 1;
 }
 .panelContestPlan .panel-body {
-    padding-top: 19px;
-    padding-left: 29px;
-    padding-right: 12px;
+    padding: 19px 12px 18px 29px;
 }
 .panelContestPlan .calendarView {
     padding-right: 16px;
@@ -4787,7 +4785,7 @@ footer .right>span:nth-child(2) {
     padding-left: 12px;
     padding-right: 0;
 }
-.contestManagement .panel-body .tabs, 
+.contestManagement .panel-body .tabs,
 .contestManagement .panel-body .content {
     padding: 0 28px 0 29px;
     position: relative;
@@ -4799,13 +4797,13 @@ footer .right>span:nth-child(2) {
     padding: 0 25px;
     position: relative;
     cursor: pointer;
-} 
+}
 .contestManagement .tabs .nav li:hover {
     /*text-decoration: underline;*/
 }
 .contestManagement .tabs .nav li:nth-child(2) {
     padding: 0 27px;
-} 
+}
 .contestManagement .tabs .nav li:last-child {
     padding: 0 24px;
 }
@@ -4911,7 +4909,7 @@ footer .right>span:nth-child(2) {
     margin-bottom: 2px;
 }
 .contestManagement .table>tbody>tr:last-child>td {
-    border-bottom-width: 0; 
+    border-bottom-width: 0;
 }
 .contestManagement .table>thead>tr>th {
     line-height: 1.29em;
@@ -5028,7 +5026,7 @@ footer .right>span:nth-child(2) {
 }
 .popupOpen .problemAssignmentPanel {
     overflow-x: auto;
-    overflow-y: auto;  
+    overflow-y: auto;
 }
 .problemAssignmentPanel {
     display: none;
@@ -6912,7 +6910,7 @@ table thead .sort.desc{
     .coderHistoryTblDiv {
         padding: 0 5px;
     }
-    .coderHistoryTblDiv .coderHistoryTable>tbody>tr>td, 
+    .coderHistoryTblDiv .coderHistoryTable>tbody>tr>td,
     .coderHistoryTblDiv .coderHistoryTable>thead>tr>th {
         padding-left: 0;
         padding-bottom: 0;
